# whale

./: Cargo.toml  README.md  test.whale
benches/: benchs.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: cpu_monitor.whale  fetch.whale  filesystem.whale  hello_world.whale  map.whale  os.whale  random_user_data.whale  table.whale  toolbox.whale  wait.whale
src/: error.rs  interface.rs  lib.rs  macros.rs  main.rs  operator.rs  token.rs
src/functions/: command.rs  dir.rs  disk.rs  file.rs  map.rs  mod.rs  output.rs  packages.rs  random.rs  sort.rs  system.rs  table.rs  wait.rs  whale.rs
src/lib/: error.rs  interface.rs
src/lib/macros/: collections.rs  disks.rs  mod.rs  network.rs  random.rs  test.rs
src/lib/value/: mod.rs  value_type.rs
src/macros/: collections.rs  command.rs  count.rs  data.rs  data_formats.rs  dir.rs  disk.rs  file.rs  filesystem.rs  find.rs  general.rs  git.rs  gui.rs  logic.rs  map.rs  mod.rs  network.rs  output.rs  package_management.rs  packages.rs  pipe.rs  random.rs  sort.rs  system.rs  table.rs  test.rs  time.rs  values.rs  wait.rs  whale.rs
src/tree/: mod.rs
src/value/: function.rs  iter.rs  mod.rs  table.rs  time.rs  value_type.rs  variable_map.rs
tests/: logic.whale  table.whale
whale/: Cargo.toml  README.md
whale/src/: error.rs  interface.rs  lib.rs  operator.rs  table.rs  token.rs  variable_map.rs
whale/src/functions/: command.rs  dir.rs  disk.rs  file.rs  mod.rs  package.rs  packages.rs  random.rs  table.rs  whale.rs
whale/src/tree/: mod.rs
whale/src/value/: mod.rs  table.rs  value_type.rs
whale/tests/: integration.rs
