[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
whale = { path = "../whale" }
nu-ansi-term = "0.47"
rayon = "1.7.0"
reedline = "0.20.0"
clap = { version = "4.3.17", features = ["derive"] }
