[package]
name = "whale_cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "whale"
path = "src/main.rs"

[dependencies]
chrono = "0.4.26"
whale = { path = "../whale", version = "0.2.0" }
nu-ansi-term = "0.47"
rayon = "1.7.0"
reedline = "0.20.0"
clap = { version = "4.3.17", features = ["derive"] }
